	PR c++/27270 	* typeck2.c (process_init_constructor_array): Reword comment. 	* pt.c (tsubst_copy_and_built): Call reshape_init before calling 	digest_init. 	PR c++/27270 	* g++.dg/ext/complit8.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117814 138bc75d-0d04-0410-961f-82ee72b054a4